# Self-Balancing-Bot

./: .gitignore  README.md
Self-Balancing-Bot-Pid/: README.md
Self-Balancing-Bot-Pid/PCBs/Motor Driver PCB/: Motor Driver PCB.kicad_pcb  Motor Driver PCB.kicad_pro  Motor Driver PCB.kicad_sch
Self-Balancing-Bot-Pid/ROS_Simulation/: Dockerfile  run_balance_bot_container.sh
Self-Balancing-Bot-Pid/ROS_Simulation/ros2_ws/: run_sim.sh  welcome.txt
Self-Balancing-Bot-Pid/ROS_Simulation/ros2_ws/src/balance_bot/: CMakeLists.txt  package.xml
Self-Balancing-Bot-Pid/ROS_Simulation/ros2_ws/src/balance_bot/gazebo/config/: controller_config.yaml
Self-Balancing-Bot-Pid/ROS_Simulation/ros2_ws/src/balance_bot/include/: kalman_filter.hpp
Self-Balancing-Bot-Pid/ROS_Simulation/ros2_ws/src/balance_bot/launch/: balance_bot_gazebo_.launch.py
Self-Balancing-Bot-Pid/ROS_Simulation/ros2_ws/src/balance_bot/src/: balance_controller.cpp  kalman_filter.cpp
Self-Balancing-Bot-Pid/ROS_Simulation/ros2_ws/src/balance_bot/urdf/: balance_bot.urdf.xacro
