<?xml version="1.0"?>
<package format="3">
  <name>balance_bot</name>
  <version>0.0.0</version>
  <description>Balance Bot Simulation</description>
  <maintainer email="maximeliofinch@gmail.com">root</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>gazebo_plugins</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>effort_controllers</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
